--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 <head>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/content.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
 
@@ -11,8 +13,9 @@
     <h1>Emily Clark</h1>
   </div>
   <div class="nav">
-      <a href="#">Home</a>
-      <div class="proj-dropdown">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><div class="proj-dropdown">
         <button class="proj-dropdown-bttn">Projects
           <i class="fa fa-caret-down"></i>
         </button>
@@ -24,9 +27,10 @@
           <a href="projects/insbx.html">Innovation Sandbox</a>
           <a href="projects/flashcards.html">Flashcards</a>
         </div>
-        </div>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+        </div> </li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+      </ul>
   </div>
   <div class="contentPane">
 </div>
