fixing dropdown responsiveness

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/content.css">
   <link rel="stylesheet" href="css/mobile.css">
+  <script src="js/submenu.js"></script>
 </head>
 <body>
 
@@ -75,7 +76,7 @@
   </div> -->
 </div>
   <div class="footer">
-    TODO REMOVE Test Test Test
+    Created by Emily Clark. Website requires IE9 or higher.
   </div>
 </body>
 </html>
