--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/content.css">
   <link rel="stylesheet" href="css/mobile.css">
-  <script src="js/submenu.js"></script>
+  <!-- <script src="js/submenu.js"></script> -->
 </head>
 <body>
 
@@ -15,8 +15,9 @@
   </div>
   <div class="nav">
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><div class="proj-dropdown">
+        <input class="dropdowninput" type="checkbox" id="dropdownbox1"/>
         <button class="proj-dropdown-bttn">Projects
           <i class="fa fa-caret-down"></i>
         </button>
@@ -29,8 +30,8 @@
           <a href="projects/flashcards.html">Flashcards</a>
         </div>
         </div> </li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="pages/about.html">About</a></li>
+      <li><a href="pages/contact.html">Contact</a></li>
       </ul>
   </div>
   <div class="contentPane">
