formatting fix, menus should work on mobile

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,6 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 <head>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/content.css">
   <link rel="stylesheet" href="css/mobile.css">
   <!-- <script src="js/submenu.js"></script> -->
@@ -33,15 +32,6 @@
       <li><a href="pages/contact.html">Contact</a></li>
       </ul>
   </div>
-  <div class="contentPane">
-</div>
-<div class="quote">
-  <div class="topQuote">
-    <p>Man can learn nothing except by going from the known to the unknown.</p>
-    <div class="quoteAttrib">- Claude Bernard </div>
-      </div>
-</div>
-
   <div class="text">
     <p id="content">My name is Emily Clark, and I am a full stack developer with a myriad of interests. This website is a collection of works I have created since 2016.
     I am working on completing my Master's in Software Engineering, and use my free time to create turn based games (and their game engines). I also currently work full time
@@ -49,10 +39,10 @@
     </p>
     <p id="content"> The projects I have curated showcase my personality, versatility, and technical accumen. As I mentioned earlier, these projects include games - a text based RPG and a visual novel. 
       I've also included supplemental engines that I developed to make content creation a more simple process for any co-contributors. I've included a full stack web application, and finally, I also included
-      software that offers true value; the study application for students, and Innovation Sandbox for professional developers.
+      productivity tools; the study application for students, and Innovation Sandbox for professional developers.
     </p>
-    <p id="content"> Over the last 4 years, I have found my desire for quality and unique solutions to be second to no one. I value keeping myself challenged, and I am always learning
-      "the next big thing". Above I included a quote that resonates deeply with me, as it represents my opinion on learning, and also emphasizes my belief that in tech, it's extremely important to keep up.
+    <p id="content"> Over the last number of years, I have found my desire for quality and unique solutions to be second to no one. I value keeping myself challenged, and I am always learning
+      "the next big thing". My current goals include learning and developing in Go, and completing the visual novel game.
     </p>
     <!-- <p id="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquet pretium elit. Phasellus dictum, orci eget viverra tristique, erat quam ultrices justo, sed tincidunt leo nisl ut magna. Integer ultrices ligula id laoreet blandit. Aenean et orci eros. Cras ullamcorper dapibus velit, vehicula bibendum arcu sagittis ac. Aenean ultrices diam sit amet nisi consectetur malesuada. Duis porttitor nibh eu libero vehicula blandit. Suspendisse interdum sem eget eros elementum posuere. Phasellus molestie volutpat turpis, quis egestas leo ornare vitae. Donec vitae quam lacus. Praesent vulputate neque fringilla rhoncus pharetra. Nunc nunc mi, egestas sit amet urna finibus, venenatis dapibus libero. Proin interdum finibus laoreet. Vivamus feugiat, augue ac cursus pretium, enim nisl venenatis felis, eu tincidunt metus turpis eget mi. Duis non quam ultrices odio varius bibendum.
 
@@ -76,7 +66,7 @@
   </div> -->
 </div>
   <div class="footer">
-    Created by Emily Clark. Website requires IE9 or higher.
+    Created by Emily Clark. Requires IE9 or higher.
   </div>
 </body>
 </html>
